kuber/3.3/src/cache-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app
  labels:
    app: cache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: network-multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  ports:
    - name: network-multitool
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: cache
